# Riichi_mahjong

./: .gitignore  CMakeLists.txt  README.md  mahjong.sln
AI算法设计方案/: 危险度估算(1).txt  快速向听数判断.txt
devcpp_proj/: Makefile.win  riichi.dev  riichi.layout
language/zh_ANSI/: control.lang  information.lang  mahjong.lang  tile.lang  yaku.lang
mahjong/: mahjong.vcxproj  mahjong.vcxproj.filters
src/: ActionGenerator.hpp  Algorithms.cpp  Algorithms.h  Algorithms.hpp  AutoFurikomu.hpp  BookManager.cpp  BookManager.h  Enums.h  Game.cpp  Game.h  Game.hpp  Group.cpp  Group.h  Group.hpp  Human.hpp  InformationStream.hpp  Mountain.cpp  Mountain.h  Mountain.hpp  MovementGenerator.hpp  Player.cpp  Player.h  Player.hpp  ResultInspector.hpp  Rules.cpp  Rules.h  Single.cpp  Single.h  Single.hpp  Yaku.cpp  Yaku.h  Yaku.hpp  YakuChecker.cpp  YakuChecker.h  YakuChecker.hpp  main.cpp
src/ai/: AI.cpp  AI.h  AutoFurikomu.hpp  Human.cpp  Human.h  Human.hpp  Tester.cpp  Tester.h
src/utils/: console.cpp  console.h
